<resources>
    <string name="app_name">iTickets</string>
    <string name="action_settings">Settings</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="reservations">Reservations</string>
    <string name="movieList">Movie List</string>
    <string name="date_of_release">Date of release:</string>
    <string name="buy_tickets">Buy tickets</string>
    <string name="reserve_tickets">Reserve Tickets</string>
    <string name="refresh_dialog">Loading...</string>
    <string name="choose_day">Choose your day: </string>
    <string name="choose_hour">Choose your time: </string>
    <string name="choose_movie_hall">Choose your movie hall:</string>
    <string name="choose_your_seats">Choose your seats</string>
    <string name="number_of_seats"># of seats:</string>
    <string name="seats_text">Seats:</string>
    <string name="title_activity_movies">MoviesActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_schedule">ScheduleActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="mapButton">Map</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="search">Search movies</string>
    <string name="day_mode">Day mode on</string>
    <string name="night_mode">Night mode</string>
    <string name="title_activity_nav">NavActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_settings">Settings</string>
    <string name="user_login">User Login</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="sign_in">Sign in</string>
    <string name="user_register">User Register</string>
    <string name="enter_email_reg">Enter email</string>
    <string name="enter_password_reg">Enter password</string>
    <string name="hall_1">Hall 1</string>
    <string name="confirm_purchase">Confirm Purchase</string>
    <string name="hall_2">Hall 2</string>
    <string name="home_nav">Home</string>
    <string name="reservations_nav">Reservations</string>
    <string name="find_us_nav">Find us</string>
    <string name="night_mode_nav">Night mode</string>
    <string name="logout">Logout</string>
    <string name="reserve_success">Successfully reserved tickets</string>
    <string name="reserve_failed">Cannot reserve zero tickets</string>
    <string name="email_is_required">Email is required</string>
    <string name="invalid_email">Please enter a valid email</string>
    <string name="password_is_required">Password is required</string>
    <string name="signing_in">Signing in. Please Wait...</string>
    <string name="wrong_email_password">Wrong email/password</string>
    <string name="need_internet">You need internet to continue!</string>
    <string name="logout_navbar">Logging out. Please Wait...</string>
    <string name="delete">Delete?</string>
    <string name="delete_information">Are you sure you want to delete</string>
    <string name="delete_yes">Yes</string>
    <string name="delete_cancel">Cancel</string>
    <string name="password_six_sym_error">Minimum length of password should be 6 symbols</string>
    <string name="registering_load">Registering. Please Wait...</string>
    <string name="register_success">Successfully registered</string>
    <string name="already_registered">You are already registered</string>
    <string name="register_error">Registration Error</string>
    <string name="reservations_view">Reservations</string>


</resources>
