<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/ic_home_black_24dp"
            android:tint="@color/button_grey"
            android:id="@+id/home"
            android:title="@string/home_nav" />
        <item
            android:icon="@drawable/ic_movie_ticket"
            android:id="@+id/reservations"
            android:tint="@color/button_grey"
            android:title="@string/reservations_nav" />
        <item
            android:icon="@drawable/ic_map"
            android:id="@+id/map"
            android:tint="@color/button_grey"
            android:title="@string/find_us_nav" />
        <item
            android:id="@+id/dayNight"
            android:icon="@drawable/moon"
            android:tint="@color/button_grey"
            android:title="@string/night_mode_nav"
            app:actionLayout="@layout/switch_item" />
        <item
            android:icon="@drawable/icons_logout"
            android:id="@+id/menuLogout"
            android:tint="@color/button_grey"
            android:title="@string/logout" />
    </group>
</menu>