<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hr.rma.sl.itickets.ScheduleActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/daySpinner"
            android:layout_alignEnd="@+id/textView3"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/choose_day"
            tools:layout_editor_absoluteX="139dp"
            tools:layout_editor_absoluteY="90dp" />

        <Spinner
            android:id="@+id/daySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView3"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="60dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="124dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:text="@string/choose_hour"
            tools:layout_editor_absoluteX="136dp"
            tools:layout_editor_absoluteY="274dp" />

        <Spinner
            android:id="@+id/hourSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView3"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="17dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="315dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="50dp"
            android:text="@string/choose_movie_hall"
            tools:layout_editor_absoluteX="136dp"
            tools:layout_editor_absoluteY="274dp" />

        <Spinner
            android:id="@+id/hallSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView3"
            android:layout_marginTop="17dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="315dp" />

        <Button
            android:id="@+id/btnChooseSeats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_background"
            android:onClick="chooseSeats"
            android:text="@string/choose_your_seats"
            android:textColor="@color/primary_text_default_material_dark" />
    </LinearLayout>

</RelativeLayout>
